--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.21",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.31.3",
     "react-phone-number-input": "^3.2.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
